# On-Device-Learning-with-LLM

./: README.md
llama.cpp/: CMakeLists.txt  enhanced-mlp.cpp  simple-mlp.cpp
llama.cpp/common/: build-info.cpp
